# linera-edge

./: .gitignore  Cargo.toml  README.md  install.sh
src/: contract.rs  lib.rs  service.rs  state.rs  types.rs
web-frontend/: index.html  package.json  run_settlement.js  tailwind.config.js  vite.config.ts
web-frontend/src/: App.tsx  i18n.ts  main.tsx  vite-env.d.ts
web-frontend/src/components/: Header.tsx  LanguageSwitcher.tsx
web-frontend/src/context/: LineraContext.tsx
web-frontend/src/pages/: AppManagement.tsx  AppManagement.tsx.bak  Betting.tsx  Dashboard.tsx  Leaderboard.tsx  Profile.tsx  Rankings.tsx
web-frontend/src/providers/: GraphQLProvider.js  WalletProvider.js  index.js
web-frontend/src/services/: BetOperations.tsx  graphql.ts  index.js
web-frontend/src/services/wallet/: dynamic-signer.ts  index.ts  linera-adapter.ts
web-frontend/src/utils/: formatters.ts
